--- a/CSharpFFPlayer/App.xaml
+++ b/CSharpFFPlayer/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:FFmpegPlayer"
+    xmlns:mahApps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -41,6 +42,8 @@
                 Color="{DynamicResource Primary500}" />
 
 
+
         </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
