--- a/CSharpFFPlayer/MainWindow.xaml
+++ b/CSharpFFPlayer/MainWindow.xaml
@@ -18,7 +18,7 @@
             <mahApps:DropDownButton Content="ファイル" Foreground="White">
                 <mahApps:DropDownButton.Items>
 
-                    <MenuItem Height="23" Click="Open">
+                    <MenuItem Height="23" Click="OpenVideo">
                         <MenuItem.Header>
                             <TextBlock
                                 VerticalAlignment="Center"
@@ -73,6 +73,21 @@
                 Name="VideoImage"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch" />
+            <Grid x:Name="LoadingOverlay"
+Background="#80000000" Visibility="Collapsed" 
+HorizontalAlignment="Stretch"
+VerticalAlignment="Stretch"
+Panel.ZIndex="100">
+
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <ProgressBar IsIndeterminate="True" Width="200" Height="10" />
+                    <TextBlock Text="読み込み中..." 
+             Foreground="White"
+             FontSize="16"
+             HorizontalAlignment="Center"
+             Margin="0,10,0,0" />
+                </StackPanel>
+            </Grid>
             <Border
                 Margin="30,0,30,10"
                 Padding="10"
@@ -84,19 +99,14 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Button
                         Grid.Column="0"
-                        Width="30"
-                        Background="White"
+                        Width="45"
                         BorderBrush="{x:Null}"
-                        Click="KeyDown_Space"
-                        Foreground="#FF757575">
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Setter Property="Content" Value="{materialDesign:PackIcon Play}" />
-                            </Style>
-                        </Button.Style>
+                        Click="KeyDown_Space">
+                        <materialDesign:PackIcon x:Name="PlayPauseIcon" Width="20" Height="20" Kind="Play" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Button>
                     <Slider
                         x:Name="SeekSlider"
@@ -110,6 +120,14 @@
                         PreviewMouseUp="SeekSlider_PreviewMouseUp"
                         TickFrequency="1"
                         Value="{Binding CurrentFrame, Mode=TwoWay}" />
+                    
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10"
+                        Grid.Column="2">
+                        <TextBlock Text="{Binding CurrentTimeDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
+                        <TextBlock Text=" / " FontSize="14" Foreground="White" />
+                        <TextBlock Text="{Binding TotalDurationDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
+
+                    </StackPanel>
                 </Grid>
             </Border>
         </Grid>
