--- a/CSharpFFPlayer/MainWindow.xaml
+++ b/CSharpFFPlayer/MainWindow.xaml
@@ -73,19 +73,25 @@
                 Name="VideoImage"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch" />
-            <Grid x:Name="LoadingOverlay"
-Background="#80000000" Visibility="Collapsed" 
-HorizontalAlignment="Stretch"
-VerticalAlignment="Stretch"
-Panel.ZIndex="100">
+            <Grid
+                x:Name="LoadingOverlay"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Panel.ZIndex="100"
+                Background="#80000000"
+                Visibility="Collapsed">
 
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <ProgressBar IsIndeterminate="True" Width="200" Height="10" />
-                    <TextBlock Text="読み込み中..." 
-             Foreground="White"
-             FontSize="16"
-             HorizontalAlignment="Center"
-             Margin="0,10,0,0" />
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <ProgressBar
+                        Width="200"
+                        Height="10"
+                        IsIndeterminate="True" />
+                    <TextBlock
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Center"
+                        FontSize="16"
+                        Foreground="White"
+                        Text="読み込み中..." />
                 </StackPanel>
             </Grid>
             <Border
@@ -106,26 +112,49 @@ Panel.ZIndex="100">
                         Width="45"
                         BorderBrush="{x:Null}"
                         Click="KeyDown_Space">
-                        <materialDesign:PackIcon x:Name="PlayPauseIcon" Width="20" Height="20" Kind="Play" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <materialDesign:PackIcon
+                            x:Name="PlayPauseIcon"
+                            Width="20"
+                            Height="20"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Kind="Play" />
                     </Button>
                     <Slider
                         x:Name="SeekSlider"
                         Grid.Column="1"
-                        Margin="20,0,20,0"
+                        Margin="20,0,40,0"
                         VerticalAlignment="Center"
+                        Focusable="False"
                         IsSnapToTickEnabled="True"
+                        IsTabStop="False"
+                        KeyboardNavigation.TabNavigation="None"
                         Maximum="{Binding TotalFrames}"
                         Minimum="0"
                         PreviewMouseDown="SeekSlider_PreviewMouseDown"
                         PreviewMouseUp="SeekSlider_PreviewMouseUp"
                         TickFrequency="1"
                         Value="{Binding CurrentFrame, Mode=TwoWay}" />
-                    
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10"
-                        Grid.Column="2">
-                        <TextBlock Text="{Binding CurrentTimeDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
-                        <TextBlock Text=" / " FontSize="14" Foreground="White" />
-                        <TextBlock Text="{Binding TotalDurationDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
+
+                    <StackPanel
+                        Grid.Column="2"
+                        HorizontalAlignment="Right"
+                        Orientation="Horizontal">
+                        <TextBlock
+                            Margin="3"
+                            HorizontalAlignment="Center"
+                            FontSize="15"
+                            Text="{Binding CurrentTimeDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
+                        <TextBlock
+                            Margin="3"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="Black"
+                            Text=" / " />
+                        <TextBlock
+                            Margin="3"
+                            FontSize="15"
+                            Text="{Binding TotalDurationDisplay, RelativeSource={RelativeSource AncestorType=Window}}" />
 
                     </StackPanel>
                 </Grid>
